versioned_docs/version-2026.1.1/turma/ein/ein2025-dp.mdx
---
slug: /turma/ein2025-dp
sidebar_label: EIN2025-DP
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "EIN2025-DP",
  "base": "EIN",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "DESENHO TÉCNICO (523)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA I (527)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "sala_6-2",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (529)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (523)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA I (527)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "sala_6-2",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "CÁLCULO MECÂNICO (522)",
          "size": 1,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "QUÍMICA I (528)",
          "size": 1,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "TECNOLOGIA DOS MATERIAIS (530)",
          "size": 1,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "CÁLCULO MECÂNICO (522)",
          "size": 1,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (524)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "TECNOLOGIA DOS MATERIAIS (530)",
          "size": 1,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "FISICA I (525)",
          "size": 1,
          "teachers": [
            "Docente DP Física"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "LÍNGUA ESTRANGEIRA MODERNA - ESPANHOL (526)",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# EIN2025-DP

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
